# libmpv-wasm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fix.patch  libmpv.cpp  libmpv_gpu.cpp  package-lock.json  package.json  tsconfig.json  vercel.json
.github/workflows/: development.yml  production.yml
demo/: .gitignore  package-lock.json  package.json  tsconfig.json
demo-vanilla/: package-lock.json  package.json  webpack.config.js
demo-vanilla/src/: index.js  style.css
demo/public/: browserconfig.xml  index.html  manifest.json
demo/src/: App.scss  App.tsx  MpvPlayerHooks.ts  index.tsx  utils.ts
demo/src/components/: FileExplorer.scss  FileExplorer.tsx  Header.scss  Header.tsx  Player.scss  Player.tsx  PlayerControls.tsx
demo/src/types/: index.d.ts
include/: base64.h  igs_reader.h  libbluray.h  thumbnail.h
mpv/: fonts.conf
patches/: externalfs_backend.cpp  externalfs_backend.h  fix.patch  library_wasmfs_externalfs.js
react-app/: .gitignore  package-lock.json  package.json  tsconfig.json
react-app/public/: index.html
react-app/src/: App.tsx  index.tsx
react-app/src/components/: Header.scss  Header.tsx  Home.scss  Home.tsx  Player.scss  Player.tsx  Player_old.tsx
react-app/src/types/: index.d.ts  interface.d.ts
scripts/: build  build_segment_wasm  build_segment_wrapper  build_wasm  clean  configure  copy_build_libs  dl_a4k_shaders  docker_build  docker_update  install  link  link_build  local_build  rebuild
src/: MpvPlayer.ts  base64.cpp  igs_reader.cpp  index.ts  libbluray.cpp  libmpv.cpp  libmpv.d.ts  thumbnail.cpp  utils.ts
src/libmpv/: igs_reader.cpp  libbluray.cpp  libmpv.cpp
src/types/: hdmv_insn.d.ts  index.d.ts  libmpv.d.ts
